fix overflowing filter bar in datatable, and reduce table title font size

--- a/MerlionPortal/MerlionPortal-war/web/css/mrp.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/mrp.css
@@ -1,3 +1,6 @@
 .ui-cell-editor-input{
     color:#555;
 }
+.ui-column-title{
+    font-size: 12px;
+}
